--- a/Frontend/eventplanner/app/addVenue/AddVenue.css
+++ b/Frontend/eventplanner/app/addVenue/AddVenue.css
@@ -17,6 +17,12 @@ body {
     width: 100%;
 }
 
+.Vsuccess {
+    margin: 0;
+    margin-top: -15px;
+    margin-bottom: 5px;
+}
+
 
 .Vmiddlez {
     background-color: #a382ea;
@@ -79,7 +85,7 @@ body {
 
 .addingV {
     width: 500px;
-    margin-top: 15px;
+    margin-top: 5px;
     height: 30px;
     color: white;
     background-color: #a382ea;
